--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "nodemon": "^3.1.3",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/uniqid": "^5.3.4"
   }
 }
